# Heat-transfer-sim

./: CMakeLists.txt  README.md  gauss.cpp  gauss.h  grid.cpp  grid.h  main.cpp  matrix.cpp  matrix.h  quadGauss.cpp  quadGauss.h
Data/: Test1_4_4.txt  Test2_4_4_MixGrid.txt  Test3_31_31_kwadrat.txt  elements.csv  example.txt  nodes.csv  sim_params.txt  substance_1.txt  substance_2.txt  substances.csv
Src/: grid.h  matrix.h  substanceData.h
